# cmake-lecture

./: CMakeLists.txt  LICENSE  README.md
add/: CMakeLists.txt
add/include/: add.h
add/source/: test-add.c  test-add.cpp  test-add.py
boost/: CMakeLists.txt  README.md  test.cpp
cuda/: CMakeLists.txt  README.md  calculate.cu  calculate.h  main.cpp
export/: README.md
export/EvalAdd/: CMakeLists.txt
export/EvalAdd/cmake/: EvalAddConfig.cmake  EvalAddConfig.cmake.in  installer.cmake
export/EvalAdd/include/eval_add/: eval_add.h
export/EvalAdd/source/: eval_add.cpp
export/use-EvalAdd/: CMakeLists.txt  main.cpp
hello/: CMakeLists.txt
hello/source/: hello.cpp
language/: 1.string.cmake  2.variable.cmake  3.list.cmake  README.md  function.cmake  message.cmake  parse.cmake  property.cmake
opencv/: CMakeLists.txt  README.md
opencv/source/: opencv-test.cpp
